--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<meta property="og:type" content="website" />
+		<meta property="og:image" content="https://citeclinic.app/og-img-min.jpg" />
+		<link rel=“canonical” href=“https://citeclinic.app” />
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
